@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-22T01:08:21Z",
+  "timestamp" : "2022-06-22T08:17:24Z",
   "count_outdated" : 349,
   "uniques_outdated" : 188,
-  "count" : 377,
+  "count" : 376,
   "uniques" : 204,
   "clones" : [
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
