@@ -1,10 +1,10 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
